fix(visual bug): better align footer text #412
fixes footer list item alignment on mobile screen sizes

--- a/benefits/static/css/styles.css
+++ b/benefits/static/css/styles.css
@@ -319,7 +319,7 @@ footer .footer-links a {
   }
 
   .global-footer ul li {
-    width: 40%;
+    text-align: center;
   }
 
   .radio-container {
